<resources>
    <string name="app_name">MAD_23012531065_Practical3</string>
    <string name="web_url">Web Url:</string>
    <string name="login">Login:</string>
    <string name="phone_no">Phone No.:</string>
    <string name="gallery">Gallery:</string>
    <string name="camera">Camera:</string>
    <string name="call_log">Call Log:</string>
    <string name="alarm">Alarm:</string>
    <string name="browse">Browse</string>
    <string name="call">Call</string>
    <string name="guni_pic">Guni_Pic</string>
    <string name="register">Register</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email_id">Email Id</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="phone_number">Phone number</string>
    <string name="login_text">LOGIN</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_text">Email</string>
    <string name="user_full_name_text">User Full Name</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="city_text">City</string>
    <string name="password_text">Password</string>
    <string name="haveAcc_text">Already have an account?</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="web_url_hint">Web URL</string>
</resources>