<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnBrowse"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:text="@string/browse"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:flow_verticalGap="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvWebUrlLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvWebUrlLabel"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvWebUrlLabel"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/web_url"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvPhoneLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_goneMarginBottom="20dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:height="5dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintBottom_toBottomOf="@+id/tvWebUrlLabel"
        app:layout_constraintEnd_toStartOf="@+id/btnBrowse"
        app:layout_constraintStart_toEndOf="@+id/tvWebUrlLabel"
        app:layout_constraintTop_toTopOf="@+id/tvWebUrlLabel" />

    <Button
        android:id="@+id/btnCall"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:text="@string/call"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:flow_verticalGap="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvPhoneLabel"
        app:layout_constraintEnd_toEndOf="@+id/btnBrowse"
        app:layout_constraintTop_toTopOf="@+id/tvPhoneLabel" />

    <Button
        android:id="@+id/btnCallLog"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:text="Call Log"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:flow_verticalGap="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvCallLogLabel"
        app:layout_constraintEnd_toEndOf="@+id/btnCall"
        app:layout_constraintTop_toTopOf="@+id/tvCallLogLabel" />

    <Button
        android:id="@+id/btnAlarm"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:text="Alarm"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:flow_verticalGap="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvAlarmLabel"
        app:layout_constraintEnd_toEndOf="@+id/btnCamera"
        app:layout_constraintTop_toTopOf="@+id/tvAlarmLabel" />

    <TextView
        android:id="@+id/tvCallLogLabel"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginBottom="30dp"
        android:text="@string/call_log"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvGalleryLabel"
        app:layout_constraintStart_toStartOf="@+id/tvPhoneLabel"
        app:layout_goneMarginBottom="20dp" />

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:text="Camera"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:flow_verticalGap="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvCameraLabel"
        app:layout_constraintEnd_toEndOf="@+id/btnGallery"
        app:layout_constraintTop_toTopOf="@+id/tvCameraLabel" />

    <TextView
        android:id="@+id/tvCameraLabel"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginBottom="30dp"
        android:text="@string/camera"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvAlarmLabel"
        app:layout_constraintStart_toStartOf="@+id/tvGalleryLabel"
        app:layout_goneMarginBottom="20dp" />

    <TextView
        android:id="@+id/tvGalleryLabel"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginBottom="30dp"
        android:text="@string/gallery"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvCameraLabel"
        app:layout_constraintStart_toStartOf="@+id/tvCallLogLabel"
        app:layout_goneMarginBottom="20dp" />

    <TextView
        android:id="@+id/tvPhoneLabel"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginBottom="30dp"
        android:text="@string/phone_no"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvCallLogLabel"
        app:layout_constraintStart_toStartOf="@+id/tvWebUrlLabel"
        app:layout_goneMarginBottom="20dp" />

    <TextView
        android:id="@+id/tvLoginLabel"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginBottom="400dp"
        android:text="@string/login"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvAlarmLabel" />

    <TextView
        android:id="@+id/tvAlarmLabel"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginBottom="30dp"
        android:text="@string/alarm"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvLoginLabel"
        app:layout_constraintStart_toStartOf="@+id/tvCameraLabel"
        app:layout_goneMarginBottom="20dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:text="Login"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:flow_verticalGap="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvLoginLabel"
        app:layout_constraintEnd_toEndOf="@+id/btnAlarm"
        app:layout_constraintTop_toTopOf="@+id/tvLoginLabel" />

    <EditText
        android:id="@+id/editTextText6"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:height="5dp"
        android:ems="10"
        android:inputType="text"
        android:text="Number"
        app:layout_constraintBottom_toBottomOf="@+id/tvPhoneLabel"
        app:layout_constraintEnd_toStartOf="@+id/btnCall"
        app:layout_constraintStart_toEndOf="@+id/tvPhoneLabel"
        app:layout_constraintTop_toTopOf="@+id/tvPhoneLabel" />

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="100dp"
        android:layout_height="48dp"

        android:text="Gallery"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:flow_verticalGap="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvGalleryLabel"
        app:layout_constraintEnd_toEndOf="@+id/btnCallLog"
        app:layout_constraintTop_toTopOf="@+id/tvGalleryLabel" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
