<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:contentDescription="@string/guni_pic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/guni_pink_logo" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:minHeight="360dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/user_full_name_text"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@+id/editText2"
                    app:layout_constraintStart_toStartOf="@+id/textView4"
                    app:layout_constraintTop_toTopOf="@+id/editText2" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number_text"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@+id/editText3"
                    app:layout_constraintStart_toStartOf="@+id/textView6"
                    app:layout_constraintTop_toTopOf="@+id/editText3" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/city_text"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@+id/editText4"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="@+id/editText4" />

                <EditText
                    android:id="@+id/editText6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/editText5"
                    android:layout_marginTop="@dimen/reg_top_margin"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/email_text"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@+id/editText5"
                    app:layout_constraintStart_toStartOf="@+id/textView9"
                    app:layout_constraintTop_toTopOf="@+id/editText5" />


                <EditText
                    android:id="@+id/editText5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/editText4"
                    android:layout_marginTop="@dimen/reg_top_margin"/>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/password_text"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@+id/editText6"
                    app:layout_constraintStart_toStartOf="@+id/textView12"
                    app:layout_constraintTop_toTopOf="@+id/editText6" />

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/editText3"
                    android:layout_marginTop="@dimen/reg_top_margin"/>

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_password"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@+id/editText7"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/editText7" />

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone"
                    android:minHeight="48dp"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@+id/editText2"
                    android:layout_marginTop="@dimen/reg_top_margin"/>

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="@dimen/reg_top_margin"/>

                <EditText
                    android:id="@+id/editText7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView12"
                    app:layout_constraintTop_toBottomOf="@+id/editText6"
                    android:layout_marginTop="@dimen/reg_top_margin"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="30dp"
            android:translationY="-25dp"
            app:layout_constraintEnd_toEndOf="@+id/materialCardView2"
            app:layout_constraintStart_toStartOf="@+id/materialCardView2"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerBtn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/materialCardView2"
            app:layout_constraintStart_toStartOf="@+id/materialCardView2"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView2">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/haveAcc_text"
                android:textSize="15sp"
                tools:layout_editor_absoluteX="232dp" />

            <Button
                android:id="@+id/returnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#F6EEF6"
                android:text="@string/login_text"
                android:textColor="#F80459"
                android:textSize="16sp"
                android:textStyle="bold"
                style="@style/Widget.AppCompat.Button.Borderless"/>
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>